--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -737,6 +737,7 @@ section {
         font-size: var(--biggest-font-size);
         font-weight: var(--font-bold);
         margin-bottom: var(--mb-2);
+        text-align: left;
     }
 
     .home__container{
