--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -917,18 +917,5 @@ input {
 }
 
 .home_paragraph{
-    font-family: Gilroy;
-font-style: normal;
-font-weight: 500;
-font-size: 15px;
-line-height: 15px;
-text-align: center;
-color: rgba(255, 255, 255, 0.85);
-margin: 50px 0;
-}
-@media screen and (max-width: 968px){
-    .home_paragraph{
-    font-size: 13px;
-    margin: 20px 0;
-    }
+margin-bottom: 1rem;
 }
